php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48980 Crash when compiling with pdo_firebird
Submitted: 2009-07-19 23:16 UTC Modified: 2009-07-19 23:34 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: Reproducible crash
PHP Version: 5.2, 5.3, HEAD OS: Linux
Private report: No CVE-ID: None
 [2009-07-19 23:16 UTC] felipe@php.net
Description:
------------
Compiling with './configure --with-pdo-firebird' we got a segfault when starting php.

Reproduce code:
---------------
$ sapi/cli/php

Expected result:
----------------
No SIGSEGV.

Actual result:
--------------
Starting program: /home/felipe/dev/php5/sapi/cli/php 
[Thread debugging using libthread_db enabled]
[New Thread 0xb7adc8e0 (LWP 9461)]

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0xb7adc8e0 (LWP 9461)]
0x08415dfe in zend_declare_class_constant_long (ce=0x0, name=0x8737b6e "FB_ATTR_DATE_FORMAT", name_length=19, value=1000, tsrm_ls=0xa2d4050)
    at /home/felipe/dev/php5/Zend/zend_API.c:3229
3229		if (ce->type & ZEND_INTERNAL_CLASS) {
(gdb) bt
#0  0x08415dfe in zend_declare_class_constant_long (ce=0x0, name=0x8737b6e "FB_ATTR_DATE_FORMAT", name_length=19, value=1000, 
    tsrm_ls=0xa2d4050) at /home/felipe/dev/php5/Zend/zend_API.c:3229
#1  0x081dabb0 in zm_startup_pdo_firebird (type=1, module_number=14, tsrm_ls=0xa2d4050)
    at /home/felipe/dev/php5/ext/pdo_firebird/pdo_firebird.c:58
#2  0x084106df in zend_startup_module_ex (module=0xa2e5ba8, tsrm_ls=0xa2d4050) at /home/felipe/dev/php5/Zend/zend_API.c:1613
#3  0x08419a77 in zend_hash_apply (ht=0x87c2e40, apply_func=0x84104fd <zend_startup_module_ex>, tsrm_ls=0xa2d4050)
    at /home/felipe/dev/php5/Zend/zend_hash.c:673
#4  0x08410896 in zend_startup_modules (tsrm_ls=0xa2d4050) at /home/felipe/dev/php5/Zend/zend_API.c:1662
#5  0x0837c2cd in php_module_startup (sf=0x87aee00, additional_modules=0x0, num_additional_modules=0)
    at /home/felipe/dev/php5/main/main.c:2007
#6  0x084eaf4f in php_cli_startup (sapi_module=0x87aee00) at /home/felipe/dev/php5/sapi/cli/php_cli.c:399
#7  0x084ebd23 in main (argc=1, argv=0xbfde7d84) at /home/felipe/dev/php5/sapi/cli/php_cli.c:771


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-07-19 23:33 UTC] svn@php.net
Automatic comment from SVN on behalf of felipe
Log: - Fixed bug #48980 (Crash when compiling with pdo_firebird)

Revision: http://svn.php.net/viewvc?view=revision&revision=284399
 [2009-07-19 23:34 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC