- Fixed bug #48980 (Crash when compiling with pdo_firebird)